@@ -1,7 +1,7 @@
 Package: party
 Title: A Laboratory for Recursive Partytioning
-Date: 2013-12-13
-Version: 1.0-11
+Date: 2014-01-15
+Version: 1.0-12
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org"),
              person("Kurt", "Hornik", role = "aut"),
@@ -25,6 +25,6 @@ Description: A computational toolbox for recursive partitioning.
 Depends: R (>= 2.14.0), methods, grid, zoo, sandwich (>= 1.1-1),
         strucchange, stats, modeltools (>= 0.2-21)
 Imports: survival, coin
-Suggests: TH.data, mlbench, colorspace, MASS, mvtnorm, vcd
+Suggests: TH.data (>= 1.0-3), mlbench, colorspace, MASS, mvtnorm, vcd
 LazyData: yes
 License: GPL-2
