@@ -138,6 +138,7 @@ proximity(object, newdata = NULL)
 
     ### honest (i.e., out-of-bag) cross-classification of
     ### true vs. predicted classes
+    data("mammoexp", package = "TH.data")
     table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
                                control = cforest_unbiased(ntree = 50)),
                                OOB = TRUE))
