@@ -150,6 +150,7 @@ Loading required package: stats4
 > 
 >     ### honest (i.e., out-of-bag) cross-classification of 
 >     ### true vs. predicted classes
+>     data("mammoexp", package = "TH.data")
 >     table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
 +                                control = cforest_unbiased(ntree = 50)), 
 +                                OOB = TRUE))
@@ -256,6 +257,7 @@ attr(,"assign")
 > 
 >     ### honest (i.e., out-of-bag) cross-classification of
 >     ### true vs. predicted classes
+>     data("mammoexp", package = "TH.data")
 >     table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
 +                                control = cforest_unbiased(ntree = 50)),
 +                                OOB = TRUE))
@@ -482,6 +484,7 @@ Number of observations:  150
 >     tr <- treeresponse(irisct, newdata = iris[1:10,])
 > 
 >     ### ordinal regression
+>     data("mammoexp", package = "TH.data")
 >     mammoct <- ctree(ME ~ ., data = mammoexp) 
 >     plot(mammoct)
 > 
@@ -596,42 +599,6 @@ detaching ‘package:survival’, ‘package:splines’, ‘package:TH.data’
 >     ens <- apply(bs, 2, function(w) cfit(ls, ct, weights = w, 
 +                                          fitmem = mem))
 > 
-> 
-> 
-> 
-> cleanEx()
-> nameEx("mammoexp")
-> ### * mammoexp
-> 
-> flush(stderr()); flush(stdout())
-> 
-> ### Name: mammoexp
-> ### Title: Mammography Experience Study
-> ### Aliases: mammoexp
-> ### Keywords: datasets
-> 
-> ### ** Examples
-> 
-> 
->   ### fit tree with attached scores (equal to the default values)
->   mtree <- ctree(ME ~ .,data = mammoexp, 
-+         scores = list(ME = 1:3, SYMPT = 1:4, DECT = 1:3))
->   mtree
-
-	 Conditional inference tree with 3 terminal nodes
-
-Response:  ME 
-Inputs:  SYMPT, PB, HIST, BSE, DECT 
-Number of observations:  412 
-
-1) SYMPT <= Agree; criterion = 1, statistic = 29.933
-  2)*  weights = 113 
-1) SYMPT > Agree
-  3) PB <= 8; criterion = 0.988, statistic = 9.17
-    4)*  weights = 208 
-  3) PB > 8
-    5)*  weights = 91 
->   plot(mtree)
 > 
 > 
 > 
@@ -992,7 +959,7 @@ nativeSpeaker           age      shoeSize
 > ###
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  14.188 0.192 14.41 0 0 
+Time elapsed:  14.216 0.156 14.402 0 0 
 > grDevices::dev.off()
 null device 
           1 
