@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-09-01 r63796) -- "Unsuffered Consequences"
+R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -349,4 +349,4 @@ X-squared = 2.1741, df = 4, p-value = 0.7038
 > 
 > proc.time()
    user  system elapsed 
-  0.852   0.060   0.911 
+  0.960   0.076   1.031 
