@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-09-01 r63796) -- "Unsuffered Consequences"
+R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -75,4 +75,4 @@ The following objects are masked from package:party:
 > 
 > proc.time()
    user  system elapsed 
-  0.864   0.032   0.894 
+  0.868   0.040   0.906 
