@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-09-01 r63796) -- "Unsuffered Consequences"
+R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -66,7 +66,7 @@ The following objects are masked from package:party:
 +                   newdata = GlaucomaM)))
 > stopifnot(isequal(predict(ct, type = "prob"), treeresponse(ct)))
 > 
-> data(GBSG2, package = "TH.data")  
+> data("GBSG2", package = "TH.data")  
 > 
 > GBSG2tree <- ctree(Surv(time, cens) ~ ., data = GBSG2)
 > stopifnot(isequal(GBSG2tree@predict_response(), 
@@ -74,7 +74,7 @@ The following objects are masked from package:party:
 > stopifnot(isequal(GBSG2tree@cond_distr_response(), 
 +           GBSG2tree@cond_distr_response(newdata = GBSG2)))
 > 
-> data(mammoexp)
+> data("mammoexp", package = "TH.data")
 > attr(mammoexp$ME, "scores") <- 1:3   
 > attr(mammoexp$SYMPT, "scores") <- 1:4
 > attr(mammoexp$DECT, "scores") <- 1:3 
@@ -89,4 +89,4 @@ The following objects are masked from package:party:
 > 
 > proc.time()
    user  system elapsed 
-  1.960   0.052   2.010 
+  2.044   0.052   2.095 
