@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-09-01 r63796) -- "Unsuffered Consequences"
+R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -189,4 +189,4 @@ $cutpoint
 > 
 > proc.time()
    user  system elapsed 
-  0.776   0.040   0.814 
+  0.840   0.056   0.891 
