@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-09-01 r63796) -- "Unsuffered Consequences"
+R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -228,7 +228,7 @@ Number of observations:  686
         19)*  weights = 20 
 > plot(tr)
 > 
-> data(mammoexp)
+> data("mammoexp", package = "TH.data")
 > attr(mammoexp$ME, "scores") <- 1:3   
 > attr(mammoexp$SYMPT, "scores") <- 1:4
 > attr(mammoexp$DECT, "scores") <- 1:3 
@@ -292,4 +292,4 @@ Number of observations:  412
 > 
 > proc.time()
    user  system elapsed 
-  2.832   0.104   2.938 
+  2.956   0.076   3.032 
