@@ -1,26 +1,19 @@
 
 > require("party")
 Loading required package: party
-Loading required package: survival
-Loading required package: splines
 Loading required package: grid
-Loading required package: modeltools
-Loading required package: stats4
-Loading required package: coin
-Loading required package: mvtnorm
 Loading required package: zoo
 
 Attaching package: ‘zoo’
 
-The following object is masked from ‘package:base’:
+The following objects are masked from ‘package:base’:
 
     as.Date, as.Date.numeric
 
 Loading required package: sandwich
 Loading required package: strucchange
-Loading required package: vcd
-Loading required package: MASS
-Loading required package: colorspace
+Loading required package: modeltools
+Loading required package: stats4
 
 > options(useFancyQuotes = FALSE)
 
@@ -252,6 +245,7 @@ p.value    0.3926249  0.1206412  0.6153455 0.8539893  0.6328381
 +     famil .... [TRUNCATED] 
 
 > plot(fmPID)
+Loading required package: vcd
 
 > coef(fmPID)
   (Intercept)    glucose
@@ -268,4 +262,4 @@ p.value    0.3926249  0.1206412  0.6153455 0.8539893  0.6328381
  *** Run successfully completed ***
 > proc.time()
    user  system elapsed 
-  5.152   0.084   5.236 
+  3.548   0.080   3.636 
