@@ -4,28 +4,24 @@
 
 > require("party")
 Loading required package: party
-Loading required package: survival
-Loading required package: splines
 Loading required package: grid
-Loading required package: modeltools
-Loading required package: stats4
-Loading required package: coin
-Loading required package: mvtnorm
 Loading required package: zoo
 
 Attaching package: ‘zoo’
 
-The following object is masked from ‘package:base’:
+The following objects are masked from ‘package:base’:
 
     as.Date, as.Date.numeric
 
 Loading required package: sandwich
 Loading required package: strucchange
-Loading required package: vcd
-Loading required package: MASS
-Loading required package: colorspace
+Loading required package: modeltools
+Loading required package: stats4
 
 > require("coin")
+Loading required package: coin
+Loading required package: survival
+Loading required package: splines
 
 > set.seed(290875)
 
@@ -492,7 +488,7 @@ Levels: A B C
 
 > x <- tptree@tree
 
-> data("GlaucomaM", package = "ipred")
+> data("GlaucomaM", package = "TH.data")
 
 > gtree <- ctree(Class ~ ., data = GlaucomaM)
 
@@ -534,7 +530,7 @@ Levels: A B C
 > legend(0.15, 0.7, pch = 1:2, legend = levels(GlaucomaM$Class), 
 +     bty = "n")
 
-> data("GBSG2", package = "ipred")
+> data("GBSG2", package = "TH.data")
 
 > stree <- ctree(Surv(time, cens) ~ ., data = GBSG2)
 
@@ -542,13 +538,19 @@ Levels: A B C
 
 > treeresponse(stree, newdata = GBSG2[1:2, ])
 [[1]]
+Call: survfit(formula = y ~ 1, weights = weights)
+
 records   n.max n.start  events  median 0.95LCL 0.95UCL 
     248     248     248      88    2093    1814      NA 
 
 [[2]]
+Call: survfit(formula = y ~ 1, weights = weights)
+
 records   n.max n.start  events  median 0.95LCL 0.95UCL 
     166     166     166      77    1701    1174    2018 
 
+
+> data("mammoexp", package = "TH.data")
 
 > mtree <- ctree(ME ~ ., data = mammoexp)
 
@@ -557,4 +559,4 @@ records   n.max n.start  events  median 0.95LCL 0.95UCL
  *** Run successfully completed ***
 > proc.time()
    user  system elapsed 
-  2.244   0.140   2.383 
+  1.404   0.056   1.457 
